# goit-pythonweb-hw-10

./: README.md  main.py  pyproject.toml
src/: schemas.py
src/api/: contacts.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py
